Changes in csv file

--- a/run.ipynb
+++ b/run.ipynb
@@ -35,6 +35,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dagshub\n",
+    "# 62cc0bc35351d92c09c77562d3238aae37273031"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Accessing as utkarsh-iitbhu\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Accessing as utkarsh-iitbhu\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Client created. Use the name of the repo <span style=\"font-weight: bold\">(</span>dvc-dagshub-setup<span style=\"font-weight: bold\">)</span> as the name of the bucket\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Client created. Use the name of the repo \u001b[1m(\u001b[0mdvc-dagshub-setup\u001b[1m)\u001b[0m as the name of the bucket\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from dagshub import get_repo_bucket_client\n",
+    "# Get a boto3.client object\n",
+    "s3 = get_repo_bucket_client(\"utkarsh-iitbhu/dvc-dagshub-setup\")\n",
+    "\n",
+    "# Upload file\n",
+    "s3.upload_file(\n",
+    "    Bucket=\"dvc-dagshub-setup\",  # name of the repo\n",
+    "    Filename=\"data/trainky.csv\",  # local path of file to upload\n",
+    "    Key=\"remote.csv\",  # remote path where to upload the file\n",
+    ")\n",
+    "# Download file\n",
+    "s3.download_file(\n",
+    "    Bucket=\"dvc-dagshub-setup\",  # name of the repo\n",
+    "    Key=\"remote.csv\",  #  remote path from where to download the file\n",
+    "    Filename=\"trainky.csv\",  # local path where to download the file\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
