--- a/run.ipynb
+++ b/run.ipynb
@@ -2,26 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3-3"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -39,28 +19,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dagshub\n",
-    "# 62cc0bc35351d92c09c77562d3238aae37273031"
+    "import dagshub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Accessing as utkarsh-iitbhu\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Accessing as utkarsh-iitbhu\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -90,7 +56,7 @@
     "s3.download_file(\n",
     "    Bucket=\"dvc-dagshub-setup\",  # name of the repo\n",
     "    Key=\"remote.csv\",  #  remote path from where to download the file\n",
-    "    Filename=\"trainky.csv\",  # local path where to download the file\n",
+    "    Filename=\"data/trainky.csv\",  # local path where to download the file\n",
     ")"
    ]
   },
